#676 Added two new settings to control the opacity for unkilled enemies and important unkilled enemies.

--- a/resources/assets/js/handlebars/map_enemy_visual_template.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_visual_template.handlebars
@@ -1,4 +1,4 @@
-<div class="{{root_classes}}" style="position: relative;">
+<div class="{{root_classes}}" style="position: relative; {{root_style}}">
     {{#each modifiers}}
     <div id="map_enemy_visual_attribute_{{name}}_{{id}}" class="modifier {{classes}}" style="left: {{left}}px; top: {{top}}px;">
         {{{html}}}
