--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,5 +1,8 @@
 // Variables
 @import "variables";
+@import "theme/darkly/darkly";
+@import "theme/superhero/superhero";
+
 // Bootstrap Select
 @import "~bootstrap-select/dist/css/bootstrap-select.min.css";
 // Datatables
