--- a/resources/assets/sass/theme/_variables.scss
+++ b/resources/assets/sass/theme/_variables.scss
@@ -34,7 +34,7 @@ $theme-map-darkly: (
     $--theme-text-contrast: #ebebeb,
     $--theme-header-height: 86px,
     $--theme-form-required: #c40000,
-    $--theme-header: var($--theme-primary),
+    $--theme-header: var($--theme-dark),
     /* The same as success button */
     $--theme-btn-accent: #00bc8c
 );
