#686 Currently viewing users are now shown in a top header on the map.
Header itself is also added, allows the user for navigation through the site even though they're on the map view. A+

--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -9,6 +9,13 @@ html, body, #map, #app, .wrapper {
     width: 100%;
 }
 
+/** HEADER */
+#map_header {
+    position: fixed;
+    width: 100%;
+    z-index: 99998;
+}
+
 /** Embed map needs space for the top header */
 .wrapper.embed_wrapper {
     height: calc(100vh - 96px);
@@ -295,14 +302,6 @@ html, body, #map, #app, .wrapper {
 }
 
 @media screen and (min-width: 1100px) {
-    .route_echo_status {
-        width: 400px;
-    }
-
-    #route_echo_container {
-        width: 400px;
-    }
-
     .route_manipulation_tools {
         width: 1000px;
     }
