#685 View page now properly has some view functionalities from the sidebar into the new draw column thingy. Moved ad from the top to the bottom.

--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -289,7 +289,7 @@ html, body, #map, #app, .wrapper {
     border-radius: 30px !important;
 }
 
-.map_top_header_background {
+.map_ad_background {
     background-color: rgba(78, 93, 108, 0.75);
 }
 
