--- a/resources/assets/js/handlebars/map_controls_route_edit_button_template.handlebars
+++ b/resources/assets/js/handlebars/map_controls_route_edit_button_template.handlebars
@@ -1,4 +1,4 @@
-<div class="row no-gutters" style="width: 57px; height: 50px;" data-toggle="tooltip" data-placement="right"
+<div class="row no-gutters" data-toggle="tooltip" data-placement="right"
      title="{{title}}" data-html="true">
     <div class="col btn
         {{#ifCond btnType '!=' '' }}
