--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -57,8 +57,8 @@ html, body, #map, #app, .wrapper {
     background-color: #2B3E50;
 }
 
-.modal-backdrop,
-.modal {
+#map .modal-backdrop,
+#map .modal {
     z-index: 100010;
 }
 
