--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -250,6 +250,19 @@
     cursor: pointer;
 }
 
+.dungeon_wallpaper {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: -1;
+
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 0;
+}
+
 .discover_panel {
     padding-top: 4rem;
     padding-bottom: 4rem;
