--- a/resources/assets/sass/theme/theme.scss
+++ b/resources/assets/sass/theme/theme.scss
@@ -585,4 +585,26 @@ body {
       background: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, var($--theme-darker) 100%);
     }
   }
+
+  .dungeon_wallpaper_cover {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: -1;
+    background-color: var($--theme-dark);
+    opacity: 0.8;
+  }
+
+  //.dungeon_wallpaper_gradient {
+  //  position: fixed;
+  //  left: 0;
+  //  top: 0;
+  //  margin-top: 95vh;
+  //  width: 100%;
+  //  height: 5vh;
+  //  z-index: -1;
+  //  background: linear-gradient(0deg, var(--theme-darker) 0%, rgba(0, 0, 0, 0) 100%);
+  //}
 }
