#693 Added ratings and enemy forces to dungeonroute card.

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -115,9 +115,9 @@
 }
 
 .discover .card_dungeonroute .card-title {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    /*white-space: nowrap;*/
+    /*overflow: hidden;*/
+    /*text-overflow: ellipsis;*/
 }
 
 .routes_table .owl-carousel {
